--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Run tests
         uses: game-ci/unity-test-runner@v2
         with:
-          unityVersion: '2020.3.24'
+          unityVersion: '2020.3.7f1'
